testData/inspections/suppression/fix/importStatement-after-highlighting.go
package main
import "<error descr="Cannot resolve file 'package1'">package1</error>"
//noinspection GoUnresolvedReference
import "package2"

func test() {
}